add ESLint and Prettier configuration files with ignore settings

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && cp -r public/* docs/",
     "watch": "tsc --watch",
     "clean": "rm -rf docs",
-    "start": "serve docs"
+    "start": "serve docs",
+    "lint": "eslint 'src/**/*.{ts,js}'",
+    "format": "prettier --write 'src/**/*.{ts,js,css,html}' 'public/**/*.{css,html}'"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,14 @@
   },
   "homepage": "https://github.com/olliee2/soundboard#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.1",
+    "prettier": "^3.6.2",
     "serve": "^14.2.4",
     "typescript": "^5.8.3"
   }
