--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && cp -r public/* docs/",
     "watch": "tsc --watch",
     "clean": "rm -rf docs",
     "start": "serve docs",
     "lint": "eslint 'src/**/*.{ts,js}'",
-    "format": "prettier --write 'src/**/*.{ts,js,css,html}' 'public/**/*.{css,html}'"
+    "format": "prettier --write 'src/**/*.{ts,js,css,html}' 'public/**/*.{css,html}'",
+    "copy:watch": "cp -r public/* docs/ && chokidar 'public/**/*.{html,css}' -c 'cp --parents {{path}} docs/'",
+    "dev": "npm-run-all --parallel watch copy:watch start"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
+    "chokidar-cli": "^3.0.0",
     "eslint": "^9.30.1",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "serve": "^14.2.4",
     "typescript": "^5.8.3"
