refactor fetch URL handling; define JSON_URL constant for better readability

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && cp -r public/* docs/",
+    "build": "mkdir -p docs && tsc && cp -r public/* docs/",
     "watch": "tsc --watch",
     "clean": "rm -rf docs/*",
     "start": "serve docs",
